# internal-services-docker

./: .editorconfig  .gitignore  .gitmodules  .shellcheckrc  .yamllint.yml  AGENTS.md  Makefile  Makefile.include  README.md  pyproject.toml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
ai/: docker-compose.yml  local.env
ai/litellm/: config.yaml
cci/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cci/app/cci_blackbook/: __init__.py  auth.py  chunking.py  embeddings.py  ingest.py  mcp_server.py  service.py  settings.py  store.py
cci/tests/: test_blackbook.py
channels/: docker-compose.yml
cnotify/: README.md  docker-compose.yml
core/: config.env  docker-compose.yml  homepage.Dockerfile  keycloak.Dockerfile  local.env  newt-entrypoint.sh  newt.Dockerfile  secrets2env.sh
core/keycloak-scripts/: README.md  immich-role-mapper.js
grow/: README.md  docker-compose.yml
immich/: README.md  docker-compose.yml  hwaccel.ml.yml
iptv/: docker-compose.yml
kanban/: README.md  docker-compose.yml
kanban/kanboard/: Dockerfile  configure-oauth.php  entrypoint-with-plugins.sh
kanban/keycloak/: configure-kanboard-client.sh
kanban/ref/: Dockerfile  kanban_ref.py  projects.yaml  test_kanban_ref.py
matrix/: README.md  config.env  docker-compose.yml
media/: config.env  docker-compose.yml  jellyfin-web-config.json
monitoring/: README.md  docker-compose.yml
mqtt/: README.md  docker-compose.yml
mqtt/central/config/: acl  (+1 more)
pangolin/: README.md  docker-compose.yml
penpot/: README.md  docker-compose.yml
(+34 files in other folders)
