[project]
name = "cci-blackbook"
version = "0.1.0"
description = "FastMCP retrieval service for the CCI Black Book."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastembed>=0.6,<0.8",
    "fastmcp>=2.13,<4",
    "numpy>=1.26,<3",
    "onnxruntime-openvino>=1.22,<2",
    "pypdf>=5,<7",
    "starlette>=0.37,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
cci-blackbook-ingest = "cci_blackbook.ingest:main"
cci-blackbook-mcp = "cci_blackbook.mcp_server:main"

[dependency-groups]
dev = [
    "ruff>=0.14,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/cci_blackbook"]
